syntax = "proto3";

package comment.pb;

option go_package = "github.com/NTHU-LSALAB/NTHU-Distributed-System/modules/comment/pb";

import "google/protobuf/timestamp.proto";

message HealthzRequest {}

message HealthzResponse {
	string status = 1;
}

message CommentInfo {
	string id = 1;
	string video_id = 2;
	string content = 3;
	google.protobuf.Timestamp created_at = 4;
	google.protobuf.Timestamp updated_at = 5;
}

// gRPC TODO: Define following message schemas.
message CreateCommentRequest {
	string video_id = 1;
	string content = 2;
}

message CreateCommentResponse {
	string id = 1;
}

message ListCommentRequest {
	string video_id = 1;
	int32 limit = 2;
	int32 offset = 3;
}

message ListCommentResponse {
	repeated CommentInfo comments = 1;
}

message UpdateCommentRequest {
	string id = 1;
	string content = 2;
}

message UpdateCommentResponse {
	CommentInfo comment = 1;
}

message DeleteCommentRequest {
	string id = 1;
}

message DeleteCommentResponse {}

message DeleteCommentByVideoIDRequest {
	string video_id = 1;
}

message DeleteCommentByVideoIDResponse {}

